tests/error/type_match/base_case_rvalue_to_lvalue_ref3.bz
// error: unable to match temporary value of type 'i32' to a reference type '&auto'
function test()
{
	let i = 0;
	let _: &auto = move i;
}
